--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,14 @@
-#'.editorconfig' file for the current JavaScript Development Environment
+#editor config file for sample JavaScript Development Environment via Node Course on Pluralsight
+#http://editorconfig.org/#example-file
+
 root = true
 
-[*.js]
-indent_style = tab
-tab_width = 5
+[*]
 end_of_line = lf
-charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = false
+
+[lib/**.js]
+indent_style = tab
+tab_width = 4
+charset = utf-8
