--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = false
 
-[lib/**.js]
+[./buildScripts/*.js]
 indent_style = tab
 tab_width = 4
 charset = utf-8
