--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "node ./buildScripts/startMessage.js",
+    "start": "node ./buildScripts/srcServer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
