--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "prestart": "node ./buildScripts/startMessage.js",
-    "start": "node ./buildScripts/srcServer.js",
+    "start": "npm-run-all --parallel security-check dev-webserv",
+    "dev-webserv": "node ./buildScripts/srcServer.js",
+    "security-check": "nsp check",
+    "localtunnel": "lt --port 3000",
+    "show-progress": "npm-run-all --parallel dev-webserv localtunnel",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
