New Files/Old Files updated

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prestart": "node ./buildScripts/startMessage.js",
+    "prestart": "babel-node ./buildScripts/startMessage.js",
     "start": "npm-run-all --parallel security-check dev-webserv",
-    "dev-webserv": "node ./buildScripts/srcServer.js",
+    "dev-webserv": "babel-node ./buildScripts/srcServer.js",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
     "show-progress": "npm-run-all --parallel dev-webserv localtunnel",
