--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,8 @@ insert_final_newline = false
 indent_style = tab
 tab_width = 4
 charset = utf-8
+
+[./*.*rc]
+indent_style = tab
+tab_width = 4
+charset = utf-8
