--- a/package.json
+++ b/package.json
@@ -33,22 +33,24 @@
     "chalk": "^2.3.1",
     "cheerio": "^1.0.0-rc.2",
     "cross-env": "^5.1.3",
-    "eslint": "^4.17.0",
-    "eslint-plugin-import": "^2.8.0",
+    "css-loader": "^0.28.10",
+    "eslint": "^4.18.1",
+    "eslint-plugin-import": "^2.9.0",
     "eslint-watch": "^3.1.3",
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "jsdom": "^11.6.2",
     "localtunnel": "^1.8.3",
-    "mocha": "^5.0.0",
-    "nock": "^9.1.6",
+    "mocha": "^5.0.1",
+    "nock": "^9.2.1",
     "npm-run-all": "^4.1.2",
-    "nsp": "^3.1.0",
+    "nsp": "^3.2.1",
     "numeral": "^2.0.6",
     "open": "0.0.5",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
-    "webpack-dev-middleware": "^2.0.5",
+    "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-md5-hash": "0.0.6"
   }
