--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "prestart": "babel-node ./buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel security-check dev-webserv",
+    "start": "npm-run-all --parallel security-check dev-webserv lint:watch",
     "dev-webserv": "babel-node ./buildScripts/srcServer.js",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
     "show-progress": "npm-run-all --parallel dev-webserv localtunnel",
+	"lint": "esw webpack.config.* src buildScripts --color",
+	"lint:watch": "npm run lint -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
