--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "prestart": "babel-node ./buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel security-check dev-webserv lint:watch",
+    "start": "npm-run-all --parallel security-check dev-webserv lint:watch test:watch",
     "dev-webserv": "babel-node ./buildScripts/srcServer.js",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
     "show-progress": "npm-run-all --parallel dev-webserv localtunnel",
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter progress ./buildScripts/testSetup.js \"./src/**/*.test.js\""
+    "test": "mocha --reporter progress ./buildScripts/testSetup.js \"./src/**/*.test.js\"",
+	"test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
