--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
 	},
 	"rules": {
 		"no-console": 1,
-		"import/no-unresolved": "off"
+		"import/no-unresolved": "off",
+		"no-extra-semi":0
 	}
 }
