--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress ./buildScripts/testSetup.js \"./src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "generateMockData": "babel-node ./buildScripts/generateMockData"
   },
   "repository": {
     "type": "git",
@@ -46,6 +47,7 @@
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "jsdom": "^11.6.2",
+    "json-schema-faker": "^0.3.6",
     "localtunnel": "^1.8.3",
     "mocha": "^5.0.1",
     "nock": "^9.2.1",
