--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "babel-node ./buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel security-check dev-webserv lint:watch test:watch",
+    "start": "npm-run-all --parallel security-check dev-webserv lint:watch test:watch start-mockapi",
     "dev-webserv": "babel-node ./buildScripts/srcServer.js",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
@@ -14,7 +14,9 @@
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress ./buildScripts/testSetup.js \"./src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
-    "generateMockData": "babel-node ./buildScripts/generateMockData"
+    "generate-mock-data": "babel-node ./buildScripts/generateMockData",
+	"prestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
   },
   "repository": {
     "type": "git",
@@ -48,6 +50,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jsdom": "^11.6.2",
     "json-schema-faker": "^0.3.6",
+    "json-server": "^0.12.1",
     "localtunnel": "^1.8.3",
     "mocha": "^5.0.1",
     "nock": "^9.2.1",
