--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
 	"rules": {
 		"no-console": 1,
 		"import/no-unresolved": "off",
-		"no-extra-semi":0
+		"no-extra-semi":0,
+		"no-useless-escape":0
 	}
 }
