--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "test": "mocha --reporter progress ./buildScripts/testSetup.js \"./src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
     "generate-mock-data": "babel-node ./buildScripts/generateMockData",
-	"prestart-mockapi": "npm run generate-mock-data",
+    "prestart-mockapi": "npm run generate-mock-data",
     "start-mockapi": "json-server --watch src/api/db.json --port 3001",
-	"clean-dist": "rimraf ./dist",
-	"make-dist": "mkdir dist",
-	"prebuild": "npm-run-all clean-dist make-dist test lint",
-	"build": "babel-node buildScripts/build.js",
-	"postbuild": "babel-node buildScripts/distServer.js"
+    "clean-dist": "rimraf ./dist",
+    "make-dist": "mkdir dist",
+    "prebuild": "npm-run-all clean-dist make-dist test lint",
+    "build": "babel-node buildScripts/build.js",
+    "postbuild": "babel-node buildScripts/distServer.js"
   },
   "repository": {
     "type": "git",
@@ -52,6 +52,7 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-watch": "^3.1.3",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "jsdom": "^11.6.2",
     "json-schema-faker": "^0.3.6",
