--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "make-dist": "mkdir dist",
     "prebuild": "npm-run-all clean-dist make-dist test lint",
     "build": "babel-node buildScripts/build.js",
-    "postbuild": "babel-node buildScripts/distServer.js"
+    "postbuild": "babel-node buildScripts/distServer.js",
+	"deploy": "surge ./dist"
   },
   "repository": {
     "type": "git",
@@ -66,6 +67,7 @@
     "open": "0.0.5",
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
+    "surge": "^0.20.1",
     "webpack": "^3.11.0",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.21.0",
